k8s/api/deployment-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: api-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: whereami
        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.11
        ports:
          - containerPort: 8080
