k8s/api/service-api.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: api-ns
spec:
  selector:
    app: api
  ports:
  - port: 8080
    targetPort: 8080
