k8s/api/httproute-external-api.yml
# this should be rejected because the namespace doesn't allow attachments to the external-http gateway
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: api-external
  namespace: api-ns
spec:
  parentRefs:
  - kind: Gateway
    name: external-http
    namespace: infra-ns
  hostnames:
  - "api.gateway-demo.dh6n.com"
  rules:
  - backendRefs:
    - name: api
      port: 8080
