k8s/api/httproute-internal-api.yml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: api-internal
  namespace: api-ns
spec:
  parentRefs:
  - kind: Gateway
    name: internal-http
    namespace: infra-ns
  hostnames:
  - "api.internal.gateway-demo.dh6n.com"
  rules:
  - backendRefs:
    - name: api
      port: 8080
